# ir_final_project

./: CMakeLists.txt  IR Project - Pizza & Path Finder.ipynb  Movement.py  Path Finding & Pizza Locating.py  Pathfinding.py  README.md  node.py  package.xml  sensor_model.py  setup.py
launch/: map_server.launch  pf_mcl.launch  rviz.launch
rviz/: mcl.rviz
scripts/: node.py
src/pf_localisation/: alternatives.py  pf.py  pf_base.py
